[package]
name = "pbudget"
version = "0.1.1"
edition = "2021"

[workspace]
members = [".", "entities", "migration"]

[dependencies]
entities = { path = "entities" }
migration = { path = "migration" } 
actix-web = "4"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "with-chrono", "with-rust_decimal", "with-uuid", "with-time", "with-json", "macros" ]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.1"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.36"
uuid = { version = "1.10.0", features = ["v4"] }
rust_decimal = "1.35.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
redis = "0.26.1"