[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "with-chrono", "with-rust_decimal", "with-uuid", "with-time", "with-json", "macros" ]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.120"
serde = "1.0.204"
time = "0.3.36"
uuid = "1.10.0"
rust_decimal = "1.35.0"
chrono = "0.4.38"