[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "./src/lib.rs"

[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "with-chrono", "with-rust_decimal", "with-uuid", "with-time", "with-json", "macros" ]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls"]}
rust_decimal = "1.35.0"
chrono = "0.4.38"
uuid = "1.10.0"
entities = {path = "../entities"}